.. _dataclasses-release-notes:

Release Notes
=============

main
----

Sep. 28, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.8.0

* replace deprecated unittest asserts with modern equivalents  (#3168)

June 22, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.7.0

* Documentation cleanups
* Make I3Tray.I3Tray and icecube.icetray.I3Tray the same thing. (#3102)
* Remove all references to load_pybindings (#3086)
* remove python 2.4 forward compatibility (#3080)
* Modify the "icetop_pulse_extract.py" part of filterscripts_v2, to incorporate plans for new SLCcal procedures. (#3069)
* update tree.hh to avoid deprecated std::allocator (#3067)
* Add "SnowHeightProvenance" enum to I3Geometry (#3018)
* Updates to TriggerKey for the trigger-sim re-write (#2997)

Apr. 12, 2023 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.6.0

* Restore use of BUILD_${PROJECT}=OFF (#3058)
* Cleanup temporary file use in tests
* Add I3IceTopSLCCalibration map to the "calibration family" of objects, which can be alongside the
  I3Calibration in a C-frame (#3003)
* Fix issues with corsika-ehist and compatibility with new corsika versions (#3004)
* Set ATWD flag based on pulse width in SuperDST (#3017)

Dec. 12, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.5.0

* Documentation cleanups
* Add __repr__ functions for I3ParticleID and I3ShowerBias
* Add the ability to calculate distribution variance to the SPEChargeDistribution for use in DOMLauncher
* Teach python how to call SPEChargeDistribution

Jul. 27, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.4.0

* Drop support for Python 2
* Clean up python bindings / modules
* Clean up warnings
* Fix buffer overlow