@@ -10,10 +10,15 @@ std::string repr(const AntennaKey& key) {
   return s.str();
 }
 
+int antkeyhash(const AntennaKey& key) {
+  return 10000 * key.GetStationID() + key.GetAntennaID();
+}
+
 void register_AntennaKey() {
   bp::class_<AntennaKey, boost::shared_ptr<AntennaKey> >("AntennaKey")
   .def(bp::init<>())
   .def(bp::init<int, int>())
+  .def("__hash__", antkeyhash)
   .def("__repr__", repr)
   .def(bp::self == bp::self)
   .def(bp::self != bp::self)
@@ -26,4 +31,12 @@ void register_AntennaKey() {
   .add_property("antenna", &AntennaKey::GetAntennaID, &AntennaKey::SetAntennaID, "Antenna ID")
   .def(bp::dataclass_suite<AntennaKey>())
   ;
+}
+
+void register_I3MapAntennaKeyAntennaKey()
+{
+  bp::class_<I3MapAntennaKeyAntennaKey, bp::bases<I3FrameObject>, I3MapAntennaKeyAntennaKeyPtr>("I3MapAntennaKeyAntennaKey")
+  .def(bp::dataclass_suite<I3MapAntennaKeyAntennaKey>())
+  ;
+  register_pointer_conversions<I3MapAntennaKeyAntennaKey>();
 }
