@@ -6,6 +6,8 @@ Release Notes
 main
 ----
 
+* added I3MapAntennaKeyAntennaKey
+
 Sep. 28, 2023 don la dieu (nega at icecube.umd.edu)
 ---------------------------------------------------
 IceTray Release v1.8.0
